<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_channel_id" translatable="false">loading_status</string>
    <string name="notification_channel_name" translatable="false">Download status</string>
    <string name="notification_channel_description" translatable="false">loading_status</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="image_cloud_description">Image of a cloud for download.</string>
    <string name="radio_button_label_1">Glide - Image Loading Library by Bump Tech</string>
    <string name="radio_button_label_2">LoadApp - Current repository by Udacity</string>
    <string name="radio_button_label_3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="filename">Filename:</string>
    <string name="status">Status:</string>
    <string name="image_status_description">Image of the status of the downloaded file</string>
    <string name="successfully">Successfully</string>
    <string name="loading">Loading</string>
    <string name="download">Download</string>
</resources>
