<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <View
            android:id="@+id/backgroundCloud"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_cloudDownload"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/image_cloud_description"
            android:src="@drawable/ic_cloud_download"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundCloud"
            app:layout_constraintEnd_toEndOf="@+id/backgroundCloud"
            app:layout_constraintStart_toStartOf="@+id/backgroundCloud"
            app:layout_constraintTop_toTopOf="@+id/backgroundCloud"
            app:tint="@color/white" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/backgroundCloud">

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/radio_button_label_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/radio_button_label_2"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/radio_button_label_3"
                android:textSize="20sp" />

        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            app:backgroundDefault="@color/colorPrimary"
            app:backgroundLoading="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textDefault="@string/download"
            app:textLoading="@string/loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>